[build-system]
requires = [
  "setuptools >= 65.3.0", # required by pyproject+setuptools_scm integration and editable installs
  "setuptools_scm[toml] >= 7.0.5" # required for "no-local-version" scheme
]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-content-capture"
description = "My package description"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["one", "two"]
license = {text = "Apache License 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "gitdb",
    "joblib",
    "jsonpickle",
    "PyYAML",
    "smmap",
    "tabulate",
    "requests",
    "ruamel.yaml",
    "filelock",
    "rapidfuzz",
]
dynamic = ["version"]


[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
ignore = "E203, W503,"
max-line-length = 150


[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/ansible_scan_core/_version.py"